--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.17.3",
     "mongoose": "^6.4.0"
   }
 }
