--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.3",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.7"
   }
 }
